--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
         </div>
     </section>
 
+    <!-- About Section -->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="assets/Taha_Linkedin.png" alt="">
+        </div>
+
+        <div class="about-content">
+            <h2 class="heading">ABOUT <span>Me</span></h2>
+            <h3>Software Engineer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint et atque tempora architecto perferendis dolorum, nemo nihil repellat porro explicabo. Repudiandae qui nulla accusantium tenetur, earum magnam atque? Enim ex accusamus molestiae quae voluptatem nihil officia praesentium beatae maxime, voluptas, cupiditate nisi placeat rerum repudiandae alias recusandae tempore consectetur labore.</p>
+            <a href="#" class="btn">Read more</a>
+        </div>
+    </section>
+
     <script src="main.js"></script>
 </body>
 </html>
