--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- About Section -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="assets/Taha_Linkedin.png" alt="">
+            <img src="assets/taha-photo.png" alt="">
         </div>
 
         <div class="about-content">
