--- a/index.html
+++ b/index.html
@@ -52,12 +52,42 @@
         </div>
 
         <div class="about-content">
-            <h2 class="heading">ABOUT <span>Me</span></h2>
+            <h2 class="heading">About <span>Me</span></h2>
             <h3>Software Engineer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint et atque tempora architecto perferendis dolorum, nemo nihil repellat porro explicabo. Repudiandae qui nulla accusantium tenetur, earum magnam atque? Enim ex accusamus molestiae quae voluptatem nihil officia praesentium beatae maxime, voluptas, cupiditate nisi placeat rerum repudiandae alias recusandae tempore consectetur labore.</p>
             <a href="#" class="btn">Read more</a>
         </div>
     </section>
+
+    <!-- Skills Section -->
+    <section class="skills" id="skills">
+        <h2 class="heading">My <span>Skills</span></h2>
+
+        <div class="skills-container">
+            <div class="skills-box">
+                <i class="fa-solid fa-code"></i>
+                <h3>Software Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quos aliquam fugit saepe voluptatum, tenetur et tempora dolorem pariatur voluptate atque, perferendis unde, tempore corporis?</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="skills-box">
+                <i class="fa-solid fa-palette"></i>
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quos aliquam fugit saepe voluptatum, tenetur et tempora dolorem pariatur voluptate atque, perferendis unde, tempore corporis?</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="skills-box">
+                <i class="fa-brands fa-android"></i>
+                <h3>App Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quos aliquam fugit saepe voluptatum, tenetur et tempora dolorem pariatur voluptate atque, perferendis unde, tempore corporis?</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Portfolio Section -->
 
     <script src="main.js"></script>
 </body>
