footer and contact section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!-- Portfolio Section -->
 
     <section class="portfolio" id="portfolio">
-        <h2 class="heading">Latest <Span>Projects</Span></h2>
+        <h2 class="heading">Latest <span>Projects</span></h2>
 
         <div class="portfolio-container">
             <div class="portfolio-box">
@@ -138,10 +138,47 @@
                 </div>
             </div>
 
-
         </div>
     </section>
 
+    <!-- Contact Section -->
+
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me</span></h2>
+
+        <form action="#">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email Address">
+            </div>
+            <div class="input-box">
+                <input type="number" placeholder="Mobile Number">
+                <input type="text" placeholder="Email Subject">
+            </div>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="btn">
+        </form>
+    </section>
+
+
+    <!-- Footer Section -->
+
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2024 Taha Hashim. All Rights Reserved.</p>
+        </div>
+
+        <div class="footer-iconTop">
+            <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
+        </div>
+    </footer>
+
+
+
+
+
+
+    <!-- Main JS -->
     <script src="main.js"></script>
 </body>
 </html>
