scroll reveal and types js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="home-content">
             <h3>Hi, Myself</h3>
             <h1>Taha Hashim</h1>
-            <h3>And I'm a <span>Software Engineer</span></h3>
+            <h3>And I'm a <span class="multiple-text"></span></h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et culpa laborum praesentium sed beatae atque, repellat corporis exercitationem labore neque hic similique, illum quasi enim? Officia enim aut dicta repellendus.</p>
             <div class="social-media">
                 <a href="#"><i class="fa-brands fa-github"></i></a>
@@ -175,8 +175,11 @@
 
 
 
+    <!-- Scroll Reveal JS -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
-
+    <!-- Typed JS -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
     <!-- Main JS -->
     <script src="main.js"></script>
