--- a/index.html
+++ b/index.html
@@ -33,29 +33,29 @@
             <h3>And I'm a <span class="multiple-text"></span></h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et culpa laborum praesentium sed beatae atque, repellat corporis exercitationem labore neque hic similique, illum quasi enim? Officia enim aut dicta repellendus.</p>
             <div class="social-media">
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://github.com/tahahashim10" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/tahahashim10/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="mailto:taha.hashim@mail.utoronto.ca" target="_blank"><i class="fa-solid fa-envelope"></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="assets/Taha_Hashim_Resume.pdf" target="_blank" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
-            <img src="assets/Taha_Linkedin.png" alt="">
+            <img src="assets/Taha_LinkedIn_PFP.PNG" alt="">
         </div>
     </section>
 
     <!-- About Section -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="assets/taha-photo.png" alt="">
+            <img src="assets/Taha_Standing.PNG" alt="">
         </div>
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Software Engineer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint et atque tempora architecto perferendis dolorum, nemo nihil repellat porro explicabo. Repudiandae qui nulla accusantium tenetur, earum magnam atque? Enim ex accusamus molestiae quae voluptatem nihil officia praesentium beatae maxime, voluptas, cupiditate nisi placeat rerum repudiandae alias recusandae tempore consectetur labore.</p>
-            <a href="#" class="btn">Read more</a>
+            <a href="#skills" class="btn">More about me</a>
         </div>
     </section>
 
@@ -85,6 +85,8 @@
                 <a href="#" class="btn">Read More</a>
             </div>
         </div>
+
+        
     </section>
 
     <!-- Portfolio Section -->
