--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="skills" id="skills">
         <h2 class="heading">My <span>Skills</span></h2>
 
-        <div class="skills-container">
+        <!-- <div class="skills-container">
             <div class="skills-box">
                 <i class="fa-solid fa-code"></i>
                 <h3>Software Development</h3>
@@ -83,6 +83,115 @@
                 <h3>App Development</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quos aliquam fugit saepe voluptatum, tenetur et tempora dolorem pariatur voluptate atque, perferendis unde, tempore corporis?</p>
                 <a href="#" class="btn">Read More</a>
+            </div>
+        </div> -->
+
+        <div class="skills-details-container">
+            <div class="about-container">
+                <div class="details-container">
+                    <h2 class="skills-sub-title">Technical Skills</h2>
+                    <div class="article-container">
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>HTML/CSS</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>Python</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>Java</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>JavaScript</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>C/C++</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>C#</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>SQL</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+
+
+                    </div>
+                </div>
+
+                <div class="details-container">
+                    <h2 class="skills-sub-title">Professional Skills</h2>
+                    <div class="article-container">
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>Creativity</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>Communication</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>Problem Solving</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>Teamwork</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        
+
+                    </div>
+                </div>
+
             </div>
         </div>
 
