about&skills changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- About Section -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="assets/Taha_Standing.PNG" alt="">
+            <img src="assets/Taha_blur.png" alt="">
         </div>
 
         <div class="about-content">
@@ -62,29 +62,6 @@
     <!-- Skills Section -->
     <section class="skills" id="skills">
         <h2 class="heading">My <span>Skills</span></h2>
-
-        <!-- <div class="skills-container">
-            <div class="skills-box">
-                <i class="fa-solid fa-code"></i>
-                <h3>Software Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quos aliquam fugit saepe voluptatum, tenetur et tempora dolorem pariatur voluptate atque, perferendis unde, tempore corporis?</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-
-            <div class="skills-box">
-                <i class="fa-solid fa-palette"></i>
-                <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quos aliquam fugit saepe voluptatum, tenetur et tempora dolorem pariatur voluptate atque, perferendis unde, tempore corporis?</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-
-            <div class="skills-box">
-                <i class="fa-brands fa-android"></i>
-                <h3>App Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quos aliquam fugit saepe voluptatum, tenetur et tempora dolorem pariatur voluptate atque, perferendis unde, tempore corporis?</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-        </div> -->
 
         <div class="skills-details-container">
             <div class="about-container">
@@ -144,7 +121,15 @@
                             <i class="fa-solid fa-check"></i>
                             <div>
                                 <h3>SQL</h3>
-                                <p>Experienced</p>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>React</h3>
+                                <p>Intermediate</p>
                             </div>
                         </article>
 
@@ -159,8 +144,21 @@
                         <article>
                             <i class="fa-solid fa-check"></i>
                             <div>
+                                <h3>Leadership</h3>
+                            </div>
+                        </article>
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>Organization</h3>
+                            </div>
+                        </article>
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
                                 <h3>Creativity</h3>
-                                <p>Experienced</p>
                             </div>
                         </article>
 
@@ -168,7 +166,6 @@
                             <i class="fa-solid fa-check"></i>
                             <div>
                                 <h3>Communication</h3>
-                                <p>Experienced</p>
                             </div>
                         </article>
 
@@ -176,7 +173,6 @@
                             <i class="fa-solid fa-check"></i>
                             <div>
                                 <h3>Problem Solving</h3>
-                                <p>Experienced</p>
                             </div>
                         </article>
 
@@ -184,7 +180,20 @@
                             <i class="fa-solid fa-check"></i>
                             <div>
                                 <h3>Teamwork</h3>
-                                <p>Experienced</p>
+                            </div>
+                        </article>
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>Time Management</h3>
+                            </div>
+                        </article>
+
+                        <article>
+                            <i class="fa-solid fa-check"></i>
+                            <div>
+                                <h3>Growth Mindset</h3>
                             </div>
                         </article>
                         
