--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Home Section -->
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Hi, Myself</h3>
+            <h3>Hi, My Name is</h3>
             <h1>Taha Hashim</h1>
             <h3>And I'm a <span class="multiple-text"></span></h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et culpa laborum praesentium sed beatae atque, repellat corporis exercitationem labore neque hic similique, illum quasi enim? Officia enim aut dicta repellendus.</p>
@@ -143,6 +143,7 @@
 
                         <article>
                             <i class="fa-solid fa-check"></i>
+                            <br>
                             <div>
                                 <h3>Leadership</h3>
                             </div>
