--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <link rel="stylesheet" href="style.css"></linkk>
+    <script
+        src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+        integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
+        crossorigin="anonymous">
+    </script>
     <title>Responsive Peronsal Portfolio Website Design</title>
 </head>
 <body>
@@ -31,7 +36,9 @@
             <h3>Hi, My Name is</h3>
             <h1>Taha Hashim</h1>
             <h3>And I'm a <span class="multiple-text"></span></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et culpa laborum praesentium sed beatae atque, repellat corporis exercitationem labore neque hic similique, illum quasi enim? Officia enim aut dicta repellendus.</p>
+            <p>
+                Welcome to my portfolio! Explore my projects, skills, and experiences. Let’s get in touch!
+            </p>
             <div class="social-media">
                 <a href="https://github.com/tahahashim10" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/tahahashim10/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
@@ -49,13 +56,20 @@
     <section class="about" id="about">
         
         <div class="about-img">
-            <img src="assets/Taha_blur.png" alt="">
+            <img src="assets/Taha_blur.png" data-tilt="" alt="" class="about-internal">
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Software Engineer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint et atque tempora architecto perferendis dolorum, nemo nihil repellat porro explicabo. Repudiandae qui nulla accusantium tenetur, earum magnam atque? Enim ex accusamus molestiae quae voluptatem nihil officia praesentium beatae maxime, voluptas, cupiditate nisi placeat rerum repudiandae alias recusandae tempore consectetur labore.</p>
+            <p>
+                I'm a passionate second-year Computer Science student at the University of Toronto. Currently, I’m a Software Services Engineer at Ericsson where I am working with some 
+                of the best telecommunications and networking technologies in the world. In addition to my studies and work, I’m also a coding instructor at Ultimate Coders, where I have 
+                the privilege of sharing my knowledge and fostering the next generation of tech enthusiasts. My journey in the tech world is driven by my curiosity and the thrill of problem-solving. 
+                I believe in the power of technology to transform lives and societies, and I’m committed to making a meaningful contribution to this field. If you have any exciting opportunities or 
+                collaborations, feel free to reach out to me. I'm open to expanding my knowledge and contributing to meaningful projects.
+            </p>
             <a href="#skills" class="btn">More about me</a>
         </div>
     </section>
@@ -220,7 +234,7 @@
                     <img src="assets/EscapeRoomGamePic.png">
                     <div class="portfolio-layer">
                         <h4>Escape Room     Game</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>An interactive Java escape room game emphasizing accessibility and unique storytelling.</p>
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </div>
                 </div>
@@ -232,7 +246,7 @@
                     <img src="assets/OnlineGroceryStorePic2.png" alt="">
                     <div class="portfolio-layer">
                         <h4>Grocery Store Website</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>A full-stack online grocery store web application with user-friendly features, robust performance, and improved load times</p>
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </div>
                 </div>
@@ -243,7 +257,7 @@
                     <img src="assets/Unix-Shell.png" alt="">
                     <div class="portfolio-layer">
                         <h4>Unix Shell</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>A Unix shell developed in C, featuring command execution, process management, and improved system efficiency.</p>
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </div>
                 </div>
