--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
         crossorigin="anonymous">
     </script>
-    <title>Responsive Peronsal Portfolio Website Design</title>
+    <title>Taha Hashim</title>
 </head>
 <body>
     <header class="header">
