--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <img src="assets/OnlineGroceryStorePic2.png" alt="">
                     <div class="portfolio-layer">
                         <h4>Grocery Store Website</h4>
-                        <p>A full-stack online grocery store web application with user-friendly features, robust performance, and improved load times</p>
+                        <p>A full-stack online grocery store web application with user-friendly features, robust performance, and improved load times.</p>
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </div>
                 </div>
