adding a latest project

--- a/index.html
+++ b/index.html
@@ -230,11 +230,24 @@
         <h2 class="heading">Latest <span>Projects</span></h2>
 
         <div class="portfolio-container">
+
+            <a href="https://github.com/tahahashim10/Portfolio-V3" target="_blank">
+                <div class="portfolio-box" id="portfoliohomepic"> 
+                    <img src="assets/portfolio_home.png">
+                    <div class="portfolio-layer">
+                        <h4>Portfolio Website</h4>
+                        <p>This is the portfolio website you're viewing right now.</p>
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </div>
+                </div>
+            </a>
+
+
             <a href="https://github.com/tahahashim10/EscapeRoomGame" target="_blank">
                 <div class="portfolio-box">
                     <img src="assets/EscapeRoomGamePic.png">
                     <div class="portfolio-layer">
-                        <h4>Escape Room     Game</h4>
+                        <h4>Escape Room Game</h4>
                         <p>An interactive Java escape room game emphasizing accessibility and unique storytelling.</p>
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </div>
