--- a/index.html
+++ b/index.html
@@ -231,6 +231,17 @@
 
         <div class="portfolio-container">
 
+            <a href="https://github.com/tahahashim10/Convo-AI" target="_blank">
+                <div class="portfolio-box" id="chatbotpic"> 
+                    <img src="assets/Convo-AI.png">
+                    <div class="portfolio-layer">
+                        <h4>Convo-AI</h4>
+                        <p>A full-stack AI chatbot built using the MERN stack and OpenAI.</p>
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </div>
+                </div>
+            </a>
+
             <a href="https://github.com/tahahashim10/Portfolio-V3" target="_blank">
                 <div class="portfolio-box" id="portfoliohomepic"> 
                     <img src="assets/portfolio_home.png">
