updating about section

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Software Engineer</h3>
             <p>
-                I'm a passionate second-year Computer Science student at the University of Toronto. Currently, I’m a Software Automation Engineer at Ericsson where I am working with some 
-                of the best telecommunications and networking technologies in the world. In addition to my studies and work, I’m also a coding instructor at Ultimate Coders, where I have 
+                I'm a passionate third-year Computer Science student at the University of Toronto. I was a Software Automation Engineer at Ericsson where I worked with some 
+                of the best telecommunications and networking technologies in the world. In addition to my studies and work, I was also a coding instructor at Ultimate Coders, where I had 
                 the privilege of sharing my knowledge and fostering the next generation of tech enthusiasts. My journey in the tech world is driven by my curiosity and the thrill of problem-solving. 
                 I believe in the power of technology to transform lives and societies, and I’m committed to making a meaningful contribution to this field. If you have any exciting opportunities or 
                 collaborations, feel free to reach out to me. I'm open to expanding my knowledge and contributing to meaningful projects.
